# ktechlab

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  COPYING.icons-kde3  COPYING.q3poligonscanner  ChangeLog  Doxyfile  INSTALL  INSTALL.OSX  Makefile  Makefile.am  Makefile.in  Messages.sh  README  README.md  TODO  acinclude.m4  aclocal.m4  bug1.circuit  build-developer.sh  build-simple.sh  canvasitemparts.cpp  canvasmanipulator.cpp  canvasmanipulator.h  cells.cpp  circuitdocument.cpp  circuitdocument.h  circuitview.h  cnitem.cpp  config.h  config.h.cmake  config.h.in  config.status  configure  configure.in  configure.in.in  connector.h  docmanager.h  (+51 more)
core/: Makefile.am  Makefile.in
drawparts/: Makefile.am  Makefile.in  dptext.cpp  solidshape.cpp
examples/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
examples/555/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  internals.circuit  square-wave.circuit
examples/basic/: 2-way-switch.circuit  3-way-switch.circuit  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  capacitor.circuit  lrc.circuit  resistors-parallel.circuit  resistors-series.circuit  voltage-divider.circuit
examples/diodes/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  full-wave-rectifier.circuit  half-wave-rectifier.circuit
examples/jfets/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  inverter.circuit
examples/matrix_disp_driver/: CMakeLists.txt  matrix_display.circuit
examples/mosfets/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  and.circuit  inverter.circuit  nand.circuit  nor.circuit  or.circuit
examples/opamps/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  decoupler.circuit  instrumentation-amplifier.circuit  inverting-amplifier.circuit  noninverting-amplifier.circuit
examples/pic_blink/: build.sh  build_custom_sdcc.sh  pic_blink.c
examples/transistors/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  astable-multivibrator.circuit  inverter.circuit  nand.circuit  nor.circuit  scmitt-trigger.circuit  switch.circuit
icons/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  hisc-action-convert_to_assembly.svgz  hisc-action-convert_to_hex.svgz  hisc-action-convert_to_microbe.svgz  hisc-action-convert_to_pic.svgz  hisc-action-indent_asm.svgz  hisc-action-logic_or.svgz  hisc-apps-ktechlab.svgz  hisc-apps-microbe.svgz  hisc-mime-ktechlab_circuit.svgz  hisc-mime-ktechlab_flowcode.svgz  hisc-mime-ktechlab_microbe.svgz
icons-kde3/: CMakeLists.txt
icons-kde3/Crystal/: index.desktop
icons-kde3/nuvola/: readme.txt
icons-kde3/vym-icons/: formatcolorpicker.xpm  vym.icns  vym.xpm
icons/SVG_action/: build
icons/SVG_app/: build
icons/SVG_mime/: build
icons/pics/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
microbe/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  btreebase.cpp  btreebase.h  btreenode.cpp  btreenode.h  expression.cpp  expression.h  instruction.cpp  instruction.h  main.cpp  microbe.cpp  microbe.h  optimizer.cpp  optimizer.h  parser.cpp  parser.h  pic14.cpp  pic14.h  traverser.cpp  traverser.h  variable.cpp  variable.h
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  QFile  XmlMessages.sh  asmformatter.cpp  asmformatter.h  asmformatter_interface.h  bug1.circuit  bug2.circuit  canvas.cpp  canvas.h  canvas_private.h  canvasitemlist.cpp  canvasitemlist.h  canvasitemparts.cpp  canvasitemparts.h  canvasitems.cpp  canvasitems.h  canvasmanipulator.cpp  canvasmanipulator.h  canvastip.cpp  canvastip.h  cells.cpp  cells.h  circuitdocument.cpp  circuitdocument.h  circuitview.cpp  circuitview.h  ciwidgetmgr.cpp  ciwidgetmgr.h  cnitem.cpp  cnitem.h  cnitemgroup.cpp  cnitemgroup.h  code_entry.asm  code_entry.circuit  code_entry.flowcode  connector.cpp  (+130 more)
src/contexthelp/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  help-de  help-en_US  help-es  help-fr  help-it  help-uk
src/core/: CMakeLists.txt  Makefile  Makefile.in  diagnosticstyle.cpp  diagnosticstyle.h  ktechlab.kcfg  ktlconfig.kcfgc  logtofilemsghandler.cpp  logtofilemsghandler.h  main.cpp  profile.config
src/dataengines/: CMakeLists.txt
src/drawparts/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  dpimage.cpp  dpimage.h  dpline.cpp  dpline.h  dptext.cpp  dptext.h  drawpart.cpp  drawpart.h  solidshape.cpp  solidshape.h
src/electronics/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  circuitdocument.cpp  circuitdocument.h  circuiticndocument.cpp  circuiticndocument.h  circuitview.cpp  circuitview.h  component.cpp  component.h  componentmodellibrary.cpp  componentmodellibrary.h  dipcomponent.cpp  dipcomponent.h  dsubcon.h  ecnode.cpp  ecnode.h  electronicconnector.cpp  electronicconnector.h  elementmap.cpp  elementmap.h  gpsimprocessor.cpp  gpsimprocessor.h  junctionnode.cpp  junctionnode.h  pin.cpp  pin.h  pinnode.cpp  pinnode.h  port.cpp  port.h  simplecomponent.cpp  simplecomponent.h  subcircuits.cpp  subcircuits.h  switch.cpp  switch.h  typedefs.h  (+4 more)
src/flowparts/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  callsub.cpp  callsub.h  count.cpp  count.h  delay.cpp  delay.h  embed.cpp  embed.h  end.cpp  end.h  flowcodedocument.cpp  flowconnector.cpp  flowconnector.h  flowconnectorlist.cpp  flowconnectorlist.h  flowicndocument.cpp  flowicndocument.h  flowpart.cpp  flowpart.h  forloop.cpp  forloop.h  fpnode.cpp  fpnode.h  inputbutton.cpp  inputbutton.h  inputflownode.cpp  inputflownode.h  interrupt.cpp  interrupt.h  junctionflownode.cpp  junctionflownode.h  keypad.cpp  keypad.h  outputflownode.cpp  outputflownode.h  pinmapping.cpp  (+27 more)
src/gui/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  asmformattingwidget.ui  colorcombo.cpp  colorcombo.h  colorutils.cpp  colorutils.h  contexthelp.cpp  contexthelp.h  contexthelpwidget.ui  createsubprojectwidget.ui  doublespinbox.cpp  doublespinbox.h  generaloptionswidget.ui  gpasmsettingswidget.ui  gplinksettingswidget.ui  imageexportdlg.cpp  imageexportdlg.h  inputdialog.cpp  inputdialog.h  itemeditor.cpp  itemeditor.h  itemselector.cpp  itemselector.h  lineedit.cpp  lineedit.h  linkeroptionswidget.ui  logicwidget.ui  logview.cpp  (+50 more)
(+1448 files in other folders)
