INCLUDES = -I$(top_srcdir)/src 	-I$(top_srcdir)/src/electronics -I$(top_srcdir)/src/electronics/components 	-I$(top_srcdir)/src/electronics/simulation -I$(top_srcdir)/src/flowparts -I$(top_srcdir)/src/gui 	-I$(top_srcdir)/src/languages -I$(top_srcdir)/src/mechanics -I$(top_srcdir)/src/micro $(all_includes)
METASOURCES = AUTO
noinst_LTLIBRARIES = libdrawparts.la
libdrawparts_la_SOURCES = drawpart.cpp dpline.cpp solidshape.cpp dptext.cpp
noinst_HEADERS = drawpart.h dpline.h solidshape.h dptext.h

