
install( FILES
    Crystal/22x22/actions/attach.png
    Crystal/48x48/filesystems/blockdevice.png
    Crystal/16x16/actions/cancel.png
    Crystal/22x22/actions/contents.png
    Crystal/48x48/filesystems/exec.png
    Crystal/22x22/actions/fileclose.png
    Crystal/22x22/actions/fileopen.png
    Crystal/22x22/actions/filesave.png
    Crystal/48x48/mimetypes/log.png
    Crystal/22x22/actions/reload.png
    Crystal/48x48/mimetypes/source.png
    Crystal/48x48/mimetypes/source_c.png
    Crystal/22x22/actions/stop.png
    Crystal/22x22/actions/view_bottom.png
    Crystal/22x22/actions/view_right.png
    Crystal/22x22/actions/window_new.png

    DESTINATION share/apps/ktechlab/pics
    )
